# sssp-verify-scripts

./: .gitignore  ;  LICENSE  Manifest.toml  Project.toml  README.md  bands.py  dump.py  dump_Cs.py  dump_Cu.py  dump_F.py  dump_Fe.py  dump_K.py  dump_Si.py  filtered_pseudopotential_data.csv  filtered_pseudopotential_data_N.csv  invalid_cache.py  psp_fn_z.py  pyproject.toml  run_verify.py  run_verify_As.py  run_verify_Au.py  run_verify_Au_sg15.py  run_verify_Ba.py  run_verify_Bi.py  run_verify_Cs.py  run_verify_Cu.py  run_verify_F.py  run_verify_Fe.py  run_verify_He.py  run_verify_K.py  run_verify_Li.py  run_verify_Na.py  run_verify_Si.py  run_verify_Te.py  run_verify_Ti.py  set_pseudo_dict.py
1-export/: generate_library_results_SSSP_1.1.2.ipynb  generate_library_results_SSSP_1.3.0.ipynb
2-experiments/: TYPICAL_Diamond_XO_XO3.ipynb  analysis-conf-convergence.ipynb  create-experimental-upf-group.py  create-sssp-prec-v1.3-upf-group.py  run-convergence-wrt-diff-conf.py
2-experiments/2023-07-check-in-with-nic/: analysis-conf-convergence-rho-only.ipynb  analysis-conf-convergence-wfc-only.ipynb  psp_data.json  psp_data_a.json  psp_time.json  resource-time-estimation.ipynb
2-experiments/2023-09-further-finalize-test/: new
2-experiments/2024-04-convergence-def/: converge-metric-compare-bands-and-pressure.ipynb  converge-metric-compare-complex-cohesive-abs-and-cohesive-rel.ipynb  converge-metric-compare-complex-pressure-and-hydrostatic-pressure.ipynb  run-convergence-test.py  (+12 more)
computer_and_code/: config.sh
libraries-pbe/: README.md  missing_analyse.py
nb_examples/: accuracy-correlation.ipynb  convergence-props-correlation.ipynb
pre_and_post_process/: extract_output.py  invalid_cache.py  link_pseudos.py
result_json/: Au.json  Cs.json.bak  Cu.json  F.json  Fe.json  K.json  Na.json  Si.json  Te.json
results/: Mg.aiida  Mg.json  Si.aiida  Si.json
sssp_db/: Ac.json  Al.json  As.json  At.json  Ba.json  Be.json  C.json  Ca.json  Cd.json  Ce.json  Cr.json  Cs.json  Cu.json  Fe.json  Fr.json  Ga.json  H.json  He.json  Hg.json  I.json  K.json  Kr.json  La.json  Li.json  Mg.json  N.json  Na.json  Ne.json  Ni.json  O.json  Pb.json  Ra.json  Rn.json  Sc.json  Si.json  Sm.json  Te.json  Ti.json  U.json  V.json  (+2 more)
sssp_paper_plots/: generate_periodic_tables.py
sssp_verify_scripts/: __init__.py
(+3256 files in other folders)
