[build-system]
requires = ['flit_core >=3.4,<4']
build-backend = 'flit_core.buildapi'

[project]
name = 'sssp-verify-scripts'
dynamic = ['version']  # read from __init__.py
description = "Scripts for the SSSP verification paper."
authors = [{name = 'AiiDA team', email = 'jusong.yu@psi.ch'}]
readme = 'README.md'
license = {file = 'LICENSE'}
classifiers = [
    'Development Status :: 5 - Production/Stable',
    'Framework :: AiiDA',
    'License :: OSI Approved :: MIT License',
    'Operating System :: POSIX :: Linux',
    'Operating System :: MacOS :: MacOS X',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
]
keywords = ['aiida', 'dft']
requires-python = '>=3.9'
dependencies = [
    "aiida-sssp-workflow~=4.2",
    "aiida-submission-controller~=0.1.0",
]

[project.urls]
Source = 'https://github.com/unkcpz/sssp-verify-scripts'

[project.scripts]
atompaw-regenerate = "sssp_verify_scripts.scripts:atompaw_regenerate.main"

